[tool.poetry]
name = "dashboard_ppgeec"
version = "0.1.0"
description = ""
authors = ["diego medeiros <diego25rn@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.2,<3.11"
scipy = "^1.8.1"
pandas = "^1.4.2"
seaborn = "^0.11.2"
matplotlib = "^3.5.2"
streamlit = "^1.10.0"
streamlit-agraph = "^0.0.37"
plotly = "^5.8.0"
google-cloud-bigquery = "^3.2.0"
db-dtypes = "^1.0.5"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
